--- a/src/main/resources/database.properties
+++ b/src/main/resources/database.properties
@@ -1,4 +1,4 @@
 # MySQL DB properties
-db.url=jdbc:mysql://localhost:3306/spotitube
+db.url=jdbc:mysql://localhost:3306/spotitube?autoReconnect=true&useSSL=false
 db.user=lotus
 db.password=lotussecretpass
