--- a/src/main/resources/database.properties
+++ b/src/main/resources/database.properties
@@ -1,5 +1,5 @@
 # MySQL DB properties
 db.url=jdbc:mysql://localhost:3306/spotitube?serverTimezone=UTC
-db.user=lotus
+db.accountUser=lotus
 db.password=lotussecretpass
 
